--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Generator</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
 </head>
 <body>
     <div>
-    <h1>Background Generator</h1>
+    <h1>Background-color Generator</h1>
     
     <input class = "color1" type="color" name="color1" value="#00ff00">
     <input class = "color2" type = "color" name = "color2" value = "#ff0000">
